<resources>
    <string name="app_name">Player</string>
    <string name="music">本地</string>
    <string name="later">最近</string>
    <string name="collect">收藏</string>
    <string name="mine">我的</string>
    <string name="library">乐库</string>
    <string name="broadcast">电台</string>
    <string name="start_time">0.00</string>
    <string name="final_time">0.00</string>
    <string name="mine_un_log">未登录</string>
    <string name="mine_log">***您已登录</string>
    <string name="mine_un_log_msg">点击登录音乐账号</string>
    <string name="panel_title">panel_title</string>
    <string name="like_music">我喜欢的音乐</string>
    <string name="like_music_counts">0首</string>
    <string name="mine_download">下载</string>
    <string name="mine_purchased">已购</string>
    <string name="mine_recent">最近播放</string>
    <string name="mine_transceiver">我的电台</string>
    <string name="mine_create_song_menu">创建歌单</string>
    <string name="mine_import_song_menu">导入外部歌单</string>
    <string name="self_build_music_menu">自建歌单</string>
    <string name="collect_music_menu">收藏歌单</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
