<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_mine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MineFragment">


    <ImageView
        android:id="@+id/userImage"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/unselected"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unlog" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/mine_un_log"
        android:textAppearance="@style/MyBigTextAppearance"
        app:layout_constraintLeft_toRightOf="@id/userImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unLogTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="65dp"
        android:text="@string/mine_un_log_msg"
        app:layout_constraintLeft_toRightOf="@id/userImage"
        app:layout_constraintTop_toTopOf="parent"
        app:tabTextAppearance="@style/MyTextAppearance" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="43dp"
        android:layout_height="53dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="@color/white"
        android:scaleType="centerInside"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_mine_set" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/userImage" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@mipmap/vip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/mine_linear_layout_color_set"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/local_music_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:drawableTop="@drawable/mine_local_music_button"
                android:text="@string/music"
                android:textColor="@color/littleGray"
                android:textSize="16dp" />


            <Button
                android:id="@+id/button5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:drawableTop="@drawable/mine_download_button"
                android:text="@string/mine_download"
                android:textColor="@color/littleGray"
                android:textSize="16dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:drawableTop="@drawable/mine_purchased_button"
                android:text="@string/mine_purchased"
                android:textColor="@color/littleGray"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:drawableTop="@drawable/mine_recent_button"
                android:text="@string/mine_recent"
                android:textColor="@color/littleGray"
                android:textSize="16dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:drawableTop="@drawable/mine_transceiver_button"
                android:text="@string/mine_transceiver"
                android:textColor="@color/littleGray"
                android:textSize="16dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:drawableTop="@drawable/mine_collect_button"
                android:text="@string/collect"
                android:textColor="@color/littleGray"
                android:textSize="16dp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/mine_constraint_layout_color_set"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="53dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/like_music_play" />

            <TextView
                android:id="@+id/textView_my_like_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/like_music"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/textView_my_like_music_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/like_music_counts"
                app:layout_constraintTop_toBottomOf="@id/textView_my_like_music"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

